# corecollector

./: .dscanner.ini  .gitignore  PACKAGING.md  README.md  TODO.md  dub.json  dub.selections.json  meson.build  meson_options.txt
.github/workflows/: unittest.yml
data/: corecollector.conf.in  corecollector_sysctl.conf.in  coredumps.json.in  meson.build
data/man/: corecollector_conf.5.scd  corectl.1.scd
source/: meson.build
source/corecollector/: configuration.d  coredump.d  dub.json  globals.d  globals.d.in  lib.d  logging.d  lz4.d  meson.build  muslsyslog.d
source/corecollector/tests/: main.d
source/corecollector/views/: configTest01.conf  configTest02.conf
source/corectl/: corectl.d  dub.json  main.d  meson.build  options.d
source/corehelper/: corehelper.d  dub.json  main.d  meson.build  options.d
source/corehelpersetup/: main.d  meson.build
tests/: corecollector.conf.in  crash.d  libTest.d  meson.build  testAddCore.d
tests/shTestCases/: meson.build  testAddCore.sh
