option('man-pages', type: 'feature', value: 'auto', description: 'Generate and install man pages.')
option('coredump_user', type: 'string', value: 'corecollector', description: 'What user to run corehelper to while saving coredumps. Coredumps are also saved as this user.')
option('coredump_group', type: 'string', value: 'corecollector', description: 'What group to run corehelper as while saving coredumps. Coredumps are accessible for all users in this group (and may contain sensible data!)')
